feat: 应用信息接口；修改类型名称
