# docs/swagger.json
@@ -61,7 +61,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/protocol.InitialUploadReq"
+                            "$ref": "#/definitions/protocol.File_InitialUploadReq"
                         }
                     }
                 ],
@@ -69,7 +69,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/protocol.InitialUploadRsp"
+                            "$ref": "#/definitions/protocol.File_InitialUploadRsp"
                         }
                     }
                 }
@@ -157,7 +157,7 @@
         }
     },
     "definitions": {
-        "protocol.InitialUploadReq": {
+        "protocol.File_InitialUploadReq": {
             "type": "object",
             "properties": {
                 "md5": {
@@ -180,7 +180,7 @@
                 }
             }
         },
-        "protocol.InitialUploadRsp": {
+        "protocol.File_InitialUploadRsp": {
             "type": "object",
             "properties": {
                 "exists": {
